--- a/quodlibet/NEWS
+++ b/quodlibet/NEWS
@@ -1,3 +1,8 @@
+3.0.1 (2013-07-08) - *gasp*
+---------------------------
+
+ * Fix a crasher with some PyGObject versions [1211]
+
 3.0.0 (2013-06-15) - THE NEMESIS HYPOTHESIS
 -------------------------------------------
 
