--- a/quodlibet/po/en_CA.po
+++ b/quodlibet/po/en_CA.po
@@ -11,14 +11,15 @@ msgstr ""
 "Project-Id-Version: Quod Libet 0.18\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-08 10:39+0200\n"
-"PO-Revision-Date: 2007-04-27 23:19-0700\n"
+"PO-Revision-Date: 2013-07-20 22:32+0100\n"
 "Last-Translator: Joe Wreschnig <piman@sacredchao.net>\n"
 "Language-Team: Joe Wreschnig <piman@sacredchao.net>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Poedit 1.5.4\n"
+"Language: en_CA\n"
 
 #: ../data/exfalso.desktop.in.h:1
 msgid "Audio tag editor"
