--- a/quodlibet/po/ko.po
+++ b/quodlibet/po/ko.po
@@ -8,15 +8,16 @@ msgstr ""
 "Project-Id-Version: Quod Libet 0.23\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-08 10:39+0200\n"
-"PO-Revision-Date: 2006-11-18 00:57-0800\n"
+"PO-Revision-Date: 2013-07-20 22:35+0100\n"
 "Last-Translator: ChangBom Yoon <changbom.yoon@gmail.com>\n"
 "Language-Team: The FreeBSD Korean Documentation Project <doc@kr.FreeBSD."
 "org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Poedit 1.5.4\n"
+"Language: ko\n"
 
 #: ../data/exfalso.desktop.in.h:1
 msgid "Audio tag editor"
