--- a/quodlibet/po/nb.po
+++ b/quodlibet/po/nb.po
@@ -8,14 +8,15 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-08 10:39+0200\n"
-"PO-Revision-Date: 2007-08-18 18:25+0200\n"
+"PO-Revision-Date: 2013-07-20 22:31+0100\n"
 "Last-Translator: Eirik Haatveit <haatveit@gmail.com>\n"
 "Language-Team: Norwegian Bokmål\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Poedit 1.5.4\n"
+"Language: nb\n"
 
 #: ../data/exfalso.desktop.in.h:1
 msgid "Audio tag editor"
