--- a/quodlibet/po/ro.po
+++ b/quodlibet/po/ro.po
@@ -11,16 +11,16 @@ msgstr ""
 "Project-Id-Version: ro\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-08 10:39+0200\n"
-"PO-Revision-Date: 2006-10-10 20:08+0300\n"
+"PO-Revision-Date: 2013-07-20 22:30+0100\n"
 "Last-Translator: Mugurel Tudor <mugurelu@gnome.ro>\n"
 "Language-Team: Română <gnomero@lists.sourceforge.net>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3;plural=(n==1?0:(((n%100>19)||((n%100==0)&&(n!=0)))?"
-"2:1))\n"
-"X-Generator: KBabel 1.11.4\n"
+"2:1));\n"
+"X-Generator: Poedit 1.5.4\n"
+"Language: ro\n"
 
 #: ../data/exfalso.desktop.in.h:1
 msgid "Audio tag editor"
