--- a/quodlibet/po/sv.po
+++ b/quodlibet/po/sv.po
@@ -9,14 +9,15 @@ msgstr ""
 "Project-Id-Version: Quod Libet 2.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-08 10:39+0200\n"
-"PO-Revision-Date: 2013-02-06 10:39+0100\n"
+"PO-Revision-Date: 2013-07-20 22:30+0100\n"
 "Last-Translator: Daniel Nyberg <p.daniel.nyberg@gmail.com>\n"
 "Language-Team: SWEDISH\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Poedit 1.5.4\n"
+"Language: sv\n"
 
 #: ../data/exfalso.desktop.in.h:1
 msgid "Audio tag editor"
