--- a/quodlibet/po/tr.po
+++ b/quodlibet/po/tr.po
@@ -8,14 +8,15 @@ msgstr ""
 "Project-Id-Version: Quod Libet 2.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-08 10:39+0200\n"
-"PO-Revision-Date: 2009-09-15 17:25+0300\n"
+"PO-Revision-Date: 2013-07-20 22:32+0100\n"
 "Last-Translator: Turerkan <turerkan@gmail.com>\n"
 "Language-Team: Turerkan <turerkan@gmail.com>\n"
-"Language: \n"
+"Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #: ../data/exfalso.desktop.in.h:1
 msgid "Audio tag editor"
