--- a/quodlibet/po/zh_CN.po
+++ b/quodlibet/po/zh_CN.po
@@ -8,14 +8,15 @@ msgstr ""
 "Project-Id-Version: Quod Libet 0.21\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-08 10:39+0200\n"
-"PO-Revision-Date: 2006-11-18 00:56-0800\n"
+"PO-Revision-Date: 2013-07-20 22:33+0100\n"
 "Last-Translator: Emfox Zhou <EmfoxZhou@gmail.com>\n"
 "Language-Team: Emfox Zhou <EmfoxZhou@gmail.com>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=n<0;\n"
+"X-Generator: Poedit 1.5.4\n"
+"Language: zh_CN\n"
 
 #: ../data/exfalso.desktop.in.h:1
 msgid "Audio tag editor"
