--- a/quodlibet/po/he.po
+++ b/quodlibet/po/he.po
@@ -9,14 +9,15 @@ msgstr ""
 "Project-Id-Version: Quod Libet 0.16\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-06-15 10:45+0200\n"
-"PO-Revision-Date: 2006-10-12 23:24+0200\n"
+"PO-Revision-Date: 2013-07-22 12:37+0100\n"
 "Last-Translator: \n"
 "Language-Team: Hebrew\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Poedit 1.5.4\n"
+"Language: he\n"
 
 #: ../exfalso.desktop.in.h:1
 msgid "Audio tag editor"
