--- a/quodlibet/po/hu.po
+++ b/quodlibet/po/hu.po
@@ -3,15 +3,15 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-06-15 10:45+0200\n"
-"PO-Revision-Date: 2007-04-28 09:11+0100\n"
+"PO-Revision-Date: 2013-07-22 12:37+0100\n"
 "Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
 "Language-Team: hu\n"
-"Language: \n"
+"Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Poedit-Country: HUNGARY\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #: ../exfalso.desktop.in.h:1
 msgid "Audio tag editor"
