--- a/quodlibet/po/it.po
+++ b/quodlibet/po/it.po
@@ -7,14 +7,15 @@ msgstr ""
 "Project-Id-Version: Quod Libet 0.22\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-06-15 10:45+0200\n"
-"PO-Revision-Date: 2011-05-21 15:12+0100\n"
+"PO-Revision-Date: 2013-07-22 12:37+0100\n"
 "Last-Translator: Luca Baraldi <luca.baraldi+quodlibet@gmail.com>\n"
 "Language-Team: Italian\n"
-"Language: \n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #: ../exfalso.desktop.in.h:1
 msgid "Audio tag editor"
