--- a/quodlibet/po/nl.po
+++ b/quodlibet/po/nl.po
@@ -10,15 +10,15 @@ msgstr ""
 "Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-06-15 10:45+0200\n"
-"PO-Revision-Date: 2007-04-29 15:44+0200\n"
+"PO-Revision-Date: 2013-07-22 12:38+0100\n"
 "Last-Translator: Hans van Dok <dok@xs4all.nl>\n"
 "Language-Team: Nederlands <en@li.org>\n"
-"Language: \n"
+"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #: ../exfalso.desktop.in.h:1
 msgid "Audio tag editor"
