--- a/quodlibet/NEWS
+++ b/quodlibet/NEWS
@@ -1,3 +1,12 @@
+2.6.3 (2013-09-25) - The one that can't even go naked into space without dying!
+-------------------------------------------------------------------------------
+
+This is a Windows only bug fix release.
+
+Windows:
+ * Fix library saving [1230] (Sebastian Thürrschmidt)
+
+
 2.6.2 (2013-07-22) - 256 Pictures of Cool Bugs
 ----------------------------------------------
 
