Implement 'operon image-extract' for saving embedded images.
Only saves one image atm...needs implementations for get_images() in all formats.

--- a/quodlibet/man/exfalso.1
+++ b/quodlibet/man/exfalso.1
@@ -39,7 +39,7 @@ Ex Falso displays and edits audio metadata tags. Supported formats include
 MP3, Ogg Vorbis, FLAC, Musepack (MPC), WavPack, and MOD/XM/IT.
 .sp
 This manual page is only a short reference for Ex Falso. Complete
-documentation is available at \fI\%http://code.google.com/p/quodlibet/wiki/Guide\fP.
+documentation is available at \fI\%http://code.google.com/p/quodlibet/wiki/Guide\fP\&.
 .SH OPTIONS
 .sp
 Ex Falso may be given a directory to open on the command line.
@@ -68,7 +68,7 @@ another \(aq|\(aq:
 .sp
 \fB<album|<album>|No Album> \- <title>\fP
 .sp
-See \fI\%http://code.google.com/p/quodlibet/wiki/Guide_Renaming\fP.
+See \fI\%http://code.google.com/p/quodlibet/wiki/Guide_Renaming\fP\&.
 .SH BUGS
 .sp
 See \fI\%http://code.google.com/p/quodlibet/issues/list\fP for a list of all
