--- a/quodlibet/man/quodlibet.1
+++ b/quodlibet/man/quodlibet.1
@@ -44,7 +44,7 @@ audio feeds. It has extremely flexible metadata tag editing and searching
 capabilities.
 .sp
 This manual page is only a short reference for Quod Libet. Complete
-documentation is available at \fI\%http://code.google.com/p/quodlibet/wiki/Guide\fP.
+documentation is available at \fI\%http://code.google.com/p/quodlibet/wiki/Guide\fP\&.
 .SH OPTIONS
 .INDENT 0.0
 .TP
@@ -202,14 +202,14 @@ The \(aqc\(aq postfix on strings or regular expressions makes the  search
 case\-sensitive. Numeric values may be given as integers, floating\-point
 numbers, MM:SS format, or simple English, e.g. "3 days", "2 hours".
 .sp
-See \fI\%http://code.google.com/p/quodlibet/wiki/Guide_Searching\fP.
+See \fI\%http://code.google.com/p/quodlibet/wiki/Guide_Searching\fP\&.
 .sp
 All internal tags begin with a ~ character. Non\-numeric internal tags are
 ~base‐ name, ~dirname, ~filename, ~format, ~length, ~people, and ~rating.
 Numeric internal tags are ~#added, ~#bitrate, ~#disc, ~#lastplayed,
 ~#laststarted, ~#length, ~#mtime, ~#playcount, ~#skipcount, and ~#track.
 .sp
-See \fI\%http://code.google.com/p/quodlibet/wiki/Guide_InternalTags\fP.
+See \fI\%http://code.google.com/p/quodlibet/wiki/Guide_InternalTags\fP\&.
 .SH RENAMING FILES
 .sp
 Quod Libet allows you to rename files based on their tags. In some cases
@@ -226,7 +226,7 @@ You can also specify literal text to use if the tag is missing by adding another
 .sp
 \fB<album|<album>|No Album> \- <title>\fP
 .sp
-See \fI\%http://code.google.com/p/quodlibet/wiki/Guide_Renaming\fP.
+See \fI\%http://code.google.com/p/quodlibet/wiki/Guide_Renaming\fP\&.
 .SH AUDIO BACKENDS
 .sp
 Quod Libet uses GStreamer for audio playback. It tries to read your GConf
@@ -235,7 +235,7 @@ change the pipeline option in ~/.quodlibet/config to use a different sink, or
 pass options to the sink. For example, you might use esdsink or alsasink
 device=hw:1.
 .sp
-See \fI\%http://code.google.com/p/quodlibet/wiki/Guide_AudioBackends\fP.
+See \fI\%http://code.google.com/p/quodlibet/wiki/Guide_AudioBackends\fP\&.
 .SH FILES
 .INDENT 0.0
 .TP
@@ -262,7 +262,7 @@ here.
 Put custom library browsers here.
 .UNINDENT
 .sp
-See \fI\%http://code.google.com/p/quodlibet/wiki/Guide_Extending\fP.
+See \fI\%http://code.google.com/p/quodlibet/wiki/Guide_Extending\fP\&.
 .SH BUGS
 .sp
 See \fI\%http://code.google.com/p/quodlibet/issues/list\fP for a list of all
